fixing alignment

--- a/styles.css
+++ b/styles.css
@@ -161,11 +161,11 @@ body.dark-theme {
     padding: 0;
     margin: 2rem 0;
     color: var(--text);
-    flex-grow: 1;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    gap: 1rem;
+    gap: 1.5rem
 }
 
 .pricing-features li {
@@ -308,7 +308,8 @@ select.form-control:focus {
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
+    align-items: center
 }
 
 .price-amount {
@@ -327,11 +328,11 @@ select.form-control:focus {
     padding: 0;
     margin: 2rem 0;
     color: var(--text);
-    flex-grow: 1;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    gap: 1rem;
+    gap: 1.5rem
 }
 
 .pricing-features li {
